compiler/typ/tests/fixtures/diagnostics/0236_adt_recursive_list_payload_mismatch_10.ml.infer.expected
File "0236_adt_recursive_list_payload_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0236_adt_recursive_list_payload_mismatch_10 is not a valid module name.

File "0236_adt_recursive_list_payload_mismatch_10.ml", line 2, characters 39-43:
2 | let _ : int mylist_kappa = Cons_kappa (true, Nil_kappa)
                                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
